--- a/.jshintrc
+++ b/.jshintrc
@@ -5,5 +5,5 @@
     "eqeqeq"        : true,
     "node"          : true,
     "strict"        : true,
-    "unused"        : true,
+    "unused"        : true
 }
