--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bluebird": "^2.9.13",
     "intel": "^1.0.0",
     "lodash": "^3.3.1",
+    "moment": "^2.9.0",
     "pdu": "^1.1.0",
     "serialport": "^1.5.0"
   }
